Fix spacing

--- a/app/components/info/Info.module.scss
+++ b/app/components/info/Info.module.scss
@@ -5,7 +5,7 @@
     font-family: $defaultCourier;
     align-items: center;
     justify-content: center;
-    padding: 0 0 1rem 0;
+    padding: 0 0 2rem 0;
 
 
     .infoGrid {
