--- a/app/components/sections/education/Education.module.scss
+++ b/app/components/sections/education/Education.module.scss
@@ -1,7 +1,7 @@
 @import '../../../styles/global.scss';
 
 .container {
-    padding: 3rem 1rem;
+    padding: 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -9,15 +9,15 @@
     .gridContainer {
         display: flex;
         justify-content: center;
-        padding-top: 2rem;
+        padding-top: 0.5rem;
 
 
         .educationGrid {
             display: grid;
             gap: 1.5rem;
-            padding-top: 1rem;
             grid-template-columns: repeat(3, 1fr);
             align-items: center;
+            padding-bottom: 1rem;
 
             @include respond-to(lg) {
                 grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
@@ -35,12 +35,10 @@
 
         .educationTitle {
             font-family: $defaultCalibri;
-            // color: $darkSecondary;
             margin: 0;
         }
 
         .educationDetails {
-            // color: $darkSecondary;
             font-family: $defaultCourier;
         }
     }
