--- a/app/components/sections/skills/Skills.module.scss
+++ b/app/components/sections/skills/Skills.module.scss
@@ -1,13 +1,12 @@
 @import '../../../styles/global.scss';
 
 .container {
-    padding: 3rem 1rem;
+    padding: 0.5rem;
     display: flex;
     flex-direction: column;
     align-items: center;
 
     .skillsGridContainer {
-        padding-top: 2rem;
         display: flex;
         justify-content: center;
 
@@ -17,6 +16,7 @@
             font-family: $defaultCourier;
             display: grid;
             grid-template-columns: repeat(6, 1fr);
+            padding-bottom: 2rem;
             justify-content: center;
             row-gap: 1rem;
             column-gap: 3rem;
