--- a/app/components/sections/work-experience/WorkExperience.module.scss
+++ b/app/components/sections/work-experience/WorkExperience.module.scss
@@ -1,6 +1,7 @@
 @import '../../../styles/global.scss';
 
 .section {
+    padding: 0.5rem;
     display: flex;
     flex-direction: column;
     align-items: center;
